<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-fam</string>
    <string name="press_logo">Press logo to continue</string>
    <string name="title_activity_list_shops">Shops</string>
    <string name="title_activity_list_shops_brands">%1$s</string>
    <string name="title_activity_list_shops_branches">Branches</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Settings</string>
    <string name="is_connected"></string>
    <string name="start_shopping">Shop</string>
    <string name="shops">Shops</string>
    <string name="disclaimer">All products are subject to a one shilling surcharge</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="counter_pick_meaning">Counter pick up means that once you have completed your shopping you can have your shopping packed and waiting for you at a designated counter at the supermarket.
        You just come and collect it.</string>

    //What is
    <string name="what_is_home_delivery">What is Home Delivery</string>
    <string name="what_is_counter_pickup">What is Counter Pick up</string>

    <string name="home_delivery_means">Home delivery means you can have your shopping delivered to the address you have selected.</string>
    <string name="login">Login</string>
    <string name="description">To ensure we make your shopping experience AWESOME, we require your number.
        Please enter it below and press get code you will receive an SMS code, please enter it below and click proceed.</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_code_sms">Get code via SMS</string>
    <string name="enter_code">enter the code you have received here</string>


    //Buttons
    <string name="counter_pick_up_hint">Counter Pick Up</string>
    <string name="home_delivery_hint">Home Delivery</string>
    <string name="foot_delivery_hint">| Foot Delivery</string>
    <string name="proceed_hint">PROCEED</string>

    <string name="rating_queryOne">How would you rate the delivery service?</string>
    <string name="rating_queryTwo">How easy is it to use e-fam app?</string>
    <string name="rating_queryThree">Would you recommend e-fam to your friends?</string>
    
    <string name="rating_fair">Fair</string>
    <string name="rating_good">Good</string>
    <string name="rating_excellent">Excellent</string>
    <string name="rating_yes">Yes</string>
    <string name="rating_no">No</string>
    <string name="rating_maybe">Maybe</string>
    
    <string name="neighbourhood_prompt">Select Your Neighbourhood</string>
    <string name="gender_prompt">Select Your Gender</string>
    <string-array name="planets_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
        <string name="nunuaraha_is_facilitator_between_customer_and_outlet">E-FAM IS FACILITATOR BETWEEN CUSTOMER AND OUTLET</string>

</resources>
