<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">
	
    <include 
	    android:id="@+id/actionbar"
	    android:layout_width="match_parent"
   		android:layout_height="wrap_content"
	    android:layout_alignParentTop="true" 
	    layout="@layout/global_actionbar" />
	
          <include 
        android:id="@+id/footer" 
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@+id/actionbar"
        layout="@layout/global_footer" />
	  
	<include 
	    android:id="@+id/header" 
	   	android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:layout_below="@+id/footer" 
	    layout="@layout/global_header" />
	  
	<include 
	    android:id="@+id/subHeader" 
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@+id/header"
	    layout="@layout/global_sub_header" />
	
	
	<!-- ============================================CONTENT=========================================== -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
   		android:layout_below="@+id/subHeader"
	    android:orientation="vertical"
	    android:gravity="left" >
	    
	    <Button
	        android:id="@+id/optionPickup"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
	        android:text="@string/counter_pick_up_hint"
	        android:textSize="@dimen/text_size_buttons"
	        android:textColor="@color/grey666"
        	android:gravity="left|center_vertical"
	        android:drawableLeft="@mipmap/ic_delivery_pickup"
			android:drawablePadding="20dp"
			android:drawableRight="@mipmap/imagepayment"
		    android:background="@drawable/customlistshape" />
	    
	    <Button
	        android:id="@+id/optionDelivery"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
	        android:text="@string/home_delivery_hint"
            android:textSize="@dimen/text_size_buttons"
	        android:textColor="@color/grey666"
        	android:gravity="left|center_vertical"
	        android:drawableLeft="@mipmap/ic_delivery_foot"
			android:drawablePadding="20dp"
	        android:drawableRight="@mipmap/imagepayment"
		    android:background="@drawable/customlistshape" />
	    
	    <Button
	        android:id="@+id/optionDeliveryFoot"
	         android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/foot_delivery_hint"
	        android:textSize="0dp"
	        android:textColor="@color/grey666"
        	android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:background="@drawable/customgreenbuttonshape"
        	android:visibility="gone"/>
	    
	     <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pointerwrapper5"
        android:layout_below="@id/optionDeliveryFoot"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >  
			        
			        <TextView
					    android:id="@+id/infoq"
				        android:layout_height="wrap_content"
				        android:layout_width="wrap_content"
				        android:layout_marginTop="30dp"
					    android:layout_alignParentLeft="true"
						 android:paddingBottom="0dp"
					     android:paddingLeft="5dp"
					     android:paddingRight="5dp"
					     android:minHeight="0dp"
						 android:minWidth="0dp"
					     android:text=""
					     android:textColor="@color/grey666" 
						 android:layout_gravity="left"
					     android:drawableLeft="@mipmap/customerinfo"
					     android:background="@drawable/selector"
					     />
			        
     <RelativeLayout
	        android:id="@+id/infoqwrap"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
			android:paddingBottom="0dp"
		    android:paddingTop="5dp"
		    android:minHeight="0dp"
			android:minWidth="0dp"
			android:layout_marginTop="15dp"
			android:layout_toRightOf="@+id/infoq"
			android:textSize="12sp"
	        android:textColor="@color/grey666">
	            
			             <Button
		    android:id="@+id/title1"
		    android:layout_height="30dp"
          	android:layout_marginTop="10dp"
		    android:paddingTop="5dp"
		    android:paddingBottom="0dp"
		    android:paddingLeft="5dp"
		    android:paddingRight="0dp"
		    android:text="@string/what_is_counter_pickup"
		    android:textSize="@dimen/text_size_login_page"
		    android:textColor="@color/white"
		    android:background="@drawable/purpleinfo"
		    android:drawablePadding="10dp"
		            android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:gravity="center"
		    android:textAlignment="gravity"/>
			   
			             <TextView
        android:id="@+id/text1"
        android:textSize="14sp"
	    android:textColor="@color/grey999"
	    android:paddingTop="0dp"
		android:paddingBottom="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:layout_below="@id/title1"        
		android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/counter_pick_meaning"
        android:background="@drawable/infobg" 
        android:visibility="gone"/>
			             
			  <Button
		    android:id="@+id/title2"
		    android:layout_height="30dp"
          	android:layout_marginTop="0dp"
		    android:paddingTop="0dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="5dp"
		    android:paddingRight="0dp"
		    android:text="@string/what_is_home_delivery"
		 	android:layout_below="@id/text1"
		    android:textSize="@dimen/text_size_buttons"
		    android:textColor="@color/col8965ab"
		    android:background="@drawable/yellowinfo"
		    android:drawablePadding="10dp"
		            android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:gravity="center"
		    android:textAlignment="gravity"/>
			            
			     
			  <TextView
        android:id="@+id/text2"
        android:textSize="14sp"
	    android:textColor="@color/grey999"
	    android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:layout_below="@id/title2"        
		android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/home_delivery_means"
        android:background="@drawable/infobg" 
        android:visibility="gone"/>
		
			</RelativeLayout>			
			            
			        </RelativeLayout>
	       <!-- android:layout_marginTop="10dp"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
	        android:drawableLeft="@drawable/ic_delivery_home"
	        android:drawableRight="@drawable/ic_corner_right_bottom"
		    --> 
	    
	</LinearLayout>

	<include 
        android:id="@+id/quicklinks" 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        layout="@layout/global_quicklinks2" />
     
    <include 
        android:id="@+id/progressbar_view" 
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
   		android:layout_alignParentTop="true"
        layout="@layout/global_progress_bar" />
    
</RelativeLayout>